--- a/bash/README
+++ b/bash/README
@@ -1,4 +1,7 @@
-Seurat objects can be downloaded from: https://figshare.com/articles/dataset/Conserved_spatial_patterning_of_gene_expression_in_independent_lineages_of_C4_plants/30787166
-The genome assembly and annotation can be accessed at: https://figshare.com/s/7fb9444d7cefef0c341f. 
+Cellranger outputs (filtered/raw_feature_bc_matrix) and Seurat objects can be downloaded from: https://figshare.com/articles/dataset/Conserved_spatial_patterning_of_gene_expression_in_independent_lineages_of_C4_plants/30787166.
+
+The genome assembly and annotation can be accessed at: https://figshare.com/s/7fb9444d7cefef0c341f.
+
 The single-protoplast and single-nucleus sequencing data are available at ArrayExpress under accession no.: E-MTAB-15121.
+
 Our atlases can be explored via online web portals: https://hibberdlab.shinyapps.io/gg_integrated/ for G. gynandra and https://hibberdlab.shinyapps.io/fb_integrated/ for F. bidentis. 
